@@ -150,7 +150,7 @@ public class MigratorTest {
 		ConfigurationWarnings warnings = env.getConfiguration().getConfigurationWarnings();
 		assertEquals(1, warnings.size());
 
-		String warning = warnings.get(0);
+		String warning = warnings.getWarnings().getFirst();
 		assertThat(warning, containsString("LiquibaseMigrator liquibase update failed to execute [3] change(s)")); // Test ObjectName + Error
 		assertThat(warning, containsString("Migration failed for changeset Migrator/DatabaseChangelogError.xml::error::Niels Meijer")); // Test liquibase exception
 		// H2 logs 'Table \"DUMMYTABLE\" already exists' Oracle throws 'ORA-00955: name is already used by an existing object'
